--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-asgiref==3.8.1
-certifi==2024.8.30
-dj-database-url==2.3.0
-Django==5.1.4
-django-environ==0.11.2
-psycopg2-binary==2.9.10
-sqlparse==0.5.2
-typing_extensions==4.12.2
-whitenoise==6.8.2
+asgiref
+certifi
+dj-database-url
+Django
+django-environ
+psycopg2
+psycopg2-binary
+sqlparse
+typing_extensions
+whitenoise
